fix activity stream image's alignment issue Conflicts: 	mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css

--- a/mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
+++ b/mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
@@ -4752,3 +4752,30 @@ div.v-button-link.buttonPagingcurrent,div.v-button-link.buttonPaging:hover
 .v-select-optiongroup {
 	spacing: true;
 }
+
+.timeAdd-popup {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	border-width: 0px 1px;
+	border-style: solid;
+	border-color: rgb(169, 169, 169);
+	background-color: rgb(245, 245, 245);
+}
+
+.timeAdd-popup .popup-header .v-verticallayout-margin {
+	padding: 8px 0px 8px 18px;
+}
+
+.timeAdd-popup .popup-header {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	border-bottom: 1px solid rgb(169, 169, 169);
+}
+
+/* Activity Stream Image's alignment fix */
+.stream-wrapper .v-label img {
+	display: inline-block;
+	vertical-align: bottom;
+}
